January 24, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * gui/LnxMain.c: Don't always move the mouse to the right for screensaver
   disabling.
 * win32/pcsx.sln, win32/pcsx.vcproj: Added VC8 Project File.

January 23, 2010 Wei Mingzhi <weimingzhi@gmail.com>

 * libpcsxcore/cdriso.c: Moved several definations into cdriso.h.
 * libpcsxcore/cdriso.h: Likewise.
 * libpcsxcore/ppf.c: Added PPF patch support.
 * libpcsxcore/ppf.h: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/cdrom.h: Likewise.
 * libpcsxcore/misc.c: Likewise.
 * libpcsxcore/r3000a.c: Likewise.
 * libpcsxcore/psxcommon.h: Likewise.
 * gui/LnxMain.c: Likewise.
 * gui/Linux.h: Likewise.
 * win32/gui/WndMain.c: Likewise.
 * macosx/main.m: Likewise.
 * macosx/PcsxController.m: Likewise.
 * libpcsxcore/Makefile.am: Added ppf.c and ppf.h.
 * win32/pcsx.dsp: Likewise.
 * win32/pcsx.dev: Likewise.
 * macosx/Pcsx.xcodeproj/project.pbxproj: Likewise.
 * po/zh_CN.po, po/zh_TW.po, po/pt_BR.po, po/pcsx.pot: Updated.

January 7, 2010 Wei Mingzhi <weimingzhi@gmail.com>

 * plugins/dfxvideo/draw.c: MaintainAspect() now only depends on screen
   resolution.

December 28, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * data/pcsx.glade2: Reverted to "Close" button instead of "OK/Cancel" for
   consistency with GNOME UI standards.
 * plugins/dfsound/spucfg-0.1df/dfsound.glade2: Likewise.
 * plugins/dfsound/spucfg-0.1df/main.c: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/dfxvideo.glade2: Likewise.
 * plugins/dfxvideo/gpucfg-0.1df/main.c: Likewise.
 * plugins/dfinput/cfg-gtk2.c: Likewise.
 * plugins/dfinput/dfinput.glade2: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/main.c: Likewise.
 * plugins/dfcdrom/cdrcfg-0.1df/dfcdrom.glade2: Likewise.
 * gui/ConfDlg.c: Likewise.
 * po/zh_TW.po: Updated.
 * README, NEWS: Updated.

December 19, 2009 Wei Mingzhi <weimingzhi@gmail.com>

 * win32/gui/WndMain.c: Added Portuguese (Brazilian) to the language list.
 * po/pt_BR.po, po/zh_CN.po, po/zh_TW.po, po/pcsx.pot: Updated.
